--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
         "singleQuote": true,
         "jsxSingleQuote": true,
-        "semi": false,
+        "semi": true,
         "trailingComma": "es5",
         "tabWidth": 8,
         "printWidth": 100,
